updated modularity in generating data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 data/historical_stock_data/
 data/normalized_data/
 data/training/
-data/testing/
-data/training/
+data/testing*
+data/training*
 test_results/
 historical_stock_data.zip
