--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 data/historical_stock_data/
 data/normalized_data/
 data/training/
+data/testing/
 data/testing*
 data/training*
 test_results/
+test_results*
 historical_stock_data.zip
+data/stats*
 data/stats/
